# smartops-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-otel.txt  requirements.txt
.github/workflows/: ci.yml
knowledge_base/: 01_networking.md  02_application_runtime.md  03_database.md  04_security_auth.md  05_llm_rag_ops.md
scripts/: demo.ps1  demo.sh
smartops/: __init__.py  __main__.py  config.py  main.py
smartops/agent/: react.py  tools.py
smartops/api/: auth.py  deps.py  health.py  routes.py  schemas.py
smartops/core/: async_utils.py  logging.py  metrics.py  middleware.py  redis_client.py  telemetry.py
smartops/llm/: client.py  prompts.py
smartops/rag/: retriever.py  store.py
smartops/rl/: bandit.py  features.py  rewards.py
smartops/services/: audit_store.py  job_queue.py  query_service.py  transaction_store.py
tests/: test_api.py  test_unit.py
